# yames

./: .gitignore  README.md  index.html  package.json
.github/workflows/: release.yml  snap.yml
.wibey/skills/release/: SKILL.md
Casks/: yames.rb
docs/: MIDI_INTEGRATION_PLAN.md  TAURI_UPDATER_PLAN.md  index.html  manifest.json  robots.txt  sitemap.xml  style.css
flatpak/: io.github.turutupa.yames.yml
snap/: snapcraft.yaml
src/: ipc.ts  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  engine.rs  lib.rs  state.rs
src/components/: DrillView.tsx  FloatingWidget.tsx  FullscreenView.tsx  MainWindow.tsx  ThemeEffects.tsx  TrackView.tsx  TrainView.tsx  ZenEffects.tsx
src/hooks/: useMetronome.ts
src/styles/: drill-view.css  floating-widget.css  fullscreen.css  global.css  main-window.css  track-view.css  train-view.css
winget/: turutupa.yames.yaml
