[package]
name = "yames"
version = "0.5.0"
description = "Yet Another Metronome Everyone Skips — musician-grade floating metronome"
authors = ["you"]
edition = "2021"

[lib]
name = "yames_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
cpal = "0.15"
